--- a/index.html
+++ b/index.html
@@ -75,14 +75,15 @@
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos, deserunt quam aspernatur reprehenderit ea aut dolorem non iusto tenetur incidunt saepe labore natus quae sint fugit, exercitationem placeat modi suscipit.
                     Libero ipsa aliquam numquam at commodi, inventore provident ducimus itaque, ullam a veritatis! Ullam debitis delectus quidem optio minus veniam error, laboriosam deserunt in fugiat facilis incidunt voluptatibus soluta quisquam.
                     cimus itaque, ullam a veritatis! Ullam debitis delectus quidem optio minus veniam error, laboriosam deserunt in fugiat facilis incidunt voluptatibus soluta quisquam.
-                    cimus itaque, ullam a veritatis! Ullam debitis delectus quidem optio minus veniam error, laboriosam deserunt in fugiat facilis incidunt voluptatibus soluta quisquam.
-                    Animi ea hic sint impedit placeat libero nemo unde incidunt cupiditate ipsam deleniti id enim voluptatibus, delectus excepturi assumenda laboriosam. Reiciendis harum, quasi obcaecati architecto laboriosam est maiores? Error, accusantium.</p>
+                    cimus itaque, ullam a veritatis! Ullam debitis delectus quidem optio minus veniam error, laboriosam deserunt in fugiat facilis incidunt voluptatibus soluta quisquam.provident ducimus itaque, ullam a veritatis! Ullam 
+                    incidunt cupiditate ipsam deleniti id enim voluptatibus, delectus excepturi assumenda laboriosam. Reiciendis harum, quasi obcaecati architecto laboriosam est maiores? Error, accusantium.</p>
                 </div>
                 <div class="blog-item">
                     <img src="images/hasan.jpg" alt="">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos, deserunt quam aspernatur reprehenderit ea aut dolorem non iusto tenetur incidunt saepe labore natus quae sint fugit, exercitationem placeat modi suscipit.
                     cimus itaque, ullam a veritatis! Ullam debitis delectus quidem optio minus veniam error, laboriosam deserunt in fugiat facilis incidunt voluptatibus soluta quisquam.
-                    Libero ipsa aliquam numquam at commodi, inventore provident ducimus itaque, ullam a veritatis! Ullam debitis delectus quidem optio minus veniam error, laboriosam deserunt in fugiat facilis incidunt voluptatibus soluta quisquam.
+                    Libero ipsa aliquam numquam at commodi, inventore provident ducimus itaque, ullam a veritatis! Ullam 
+                    provident ducimus itaque, ullam a veritatis! Ullam debitis delectus quidem optio minus veniam error, voluptatibus soluta quisquam.
                     cimus itaque, ullam a veritatis! Ullam debitis delectus quidem optio minus veniam error, laboriosam deserunt in fugiat facilis incidunt voluptatibus soluta quisquam.
                     Animi ea hic sint impedit placeat libero nemo unde incidunt cupiditate ipsam deleniti id enim voluptatibus, delectus excepturi assumenda laboriosam. Reiciendis harum, quasi obcaecati architecto laboriosam est maiores? Error, accusantium.</p>
                 </div>
